# dummy

./: .gitignore  .gitmodules  README.md  portfolio_v3.md  portfolio_v4.md  portfolio_v5.md
for_real_dummy/: 01-numpy-for-c-programmers.md  (+6 more)
research/aaai27-harness-transport/experiments/: README.md  local-dense-macro-pk-20260714-zh.md  local-development-experiment-plan-zh.md  local-development-matrix.tsv  local-expanded-macro-evidence-20260713-zh.md  local-exploration-matrix-v3-20260713-zh.md  local-final-branch-race-paper-pk-20260714-zh.md  local-five-way-pk-coverage-20260713-zh.md  local-harnessbench-endpoint-pk-20260714-zh.md  local-harnessbench-routing-pk-20260714-zh.md  local-ledgered-macro-evidence-20260713-zh.md  local-none-replan-source-pilot-final-20260713-zh.md  local-paper-pk-dashboard-20260714-zh.md  local-paper-pk-horizon-transform-recovery-20260714-zh.md  local-readiness-audit-20260711-zh.md  local-reviewer-requirement-audit-20260714-zh.md  local-run-continuation-20260712-zh.md  local-run-status-20260712-zh.md  local-source-policy-v2-evidence-assessment-20260713-zh.md  local-structured-action-branch-matrix-v4.tsv  local-structured-mechanism-exploration-20260713-zh.md  local-webshop-interactive-pk-20260714-zh.md  pyproject.toml
research/aaai27-harness-transport/experiments/schemas/: episode.schema.json  intervention-contract.schema.json  prediction.schema.json  traceh-action-contract.schema.json  traceh-branch.schema.json  traceh-episode.schema.json  traceh-freeze.schema.json  traceh-information-ledger.schema.json  traceh-router-artifact.schema.json
(+6520 files in other folders)
