[project]
name = "traceh-core"
version = "0.1.0"
description = "Local engineering core for TRACE-H policy transport experiments"
requires-python = ">=3.11,<3.13"
dependencies = [
  "jsonschema>=4.23,<5",
  "numpy>=2,<3",
  "POT>=0.9.6,<0.10",
  "scipy>=1.14,<2",
]

[project.optional-dependencies]
agent = [
  "alfworld==0.4.2",
  "gymnasium==0.29.1",
  "PyYAML>=6,<7",
]
inference = [
  "accelerate==1.12.0",
  "bitsandbytes==0.49.2",
  "huggingface-hub==0.36.0",
  "transformers==4.57.6",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/traceh_core"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
